# log-sentinel

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
logs/: auth.log.sample
src/log_sentinel/: analyzer.py  cli.py  integrations.py  parser.py
test/: test_parser.py
