[project]
name = "log-sentinel"
version = "0.1.0"
description = "AI-powered log analyzer for anomaly detection and incident summarization"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.2",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
log-sentinel = "log_sentinel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_sentinel"]